--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body{
 	margin: 0;
 	padding: 0;
 
+	min-width: 1222px;
+	min-height: 1750px;
+
 	font-fmily: "PT Sans Narrow", Areal, sans-serif;
 	font-size: 14px;
 	line-height: 24px;
@@ -10,9 +13,19 @@ body{
 	text-transform: uppercase;
 
 	background-color: #000000;
-	background-image: url("../img/main-background.jpg");
+	background-image: url("../img/index/main-background.jpg");
 	background-position: top center;
 	background-repeat: no-repeat;
+}
+
+.inner-page{
+	color: #000000;
+
+	background-color: #f9f6f3;
+	background-image: url("..img/index/pattern-light.img");
+	background-position: 0 0;
+	background-repeat: repeat;
+
 }
 
 a{
@@ -37,17 +50,66 @@ a{
 	background-color: #663d15;
 }
 
+.main-header{
+	margin-bottom: 75px;
+}
+
 .main-navigation{
 	font-size: 16px;
 	line-height: 20px;
 	color: #ffffff;
+
 	background-color: #000000;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.main-header-logo{
+	width: 368px;
+	height: 153px;
+
+	order: 2;
+}
+
+.main-navigation-wrapper{
+	width: 100%;
+	margin-bottom: 60px;
+
+	background-color: #000000;
+}
+
+.container{
+	width: 940px;
+	margin: 0 auto;
+	padding: 0 10px;
+}
+
+.main-navigation-wrapper .container{
+	display: flex;
+
+	justify-content: space-between;
 }
 
 .site-navigation,
 .user-navigation{
+	margin: 0;
+	padding: 0;
+
 	list-style: none;
+
+	display: flex;
 }
+
+.site-navigation{
+	width: 620px;
+}
+
+.user-navigation{
+	width: 140px;
+}
+
 
 .site-navigation a,
 .user-navigation a{
@@ -61,11 +123,23 @@ a{
 	background-color: #242424;
 }
 
+.features{
+	margin-bottom: 80px;
+}
+
 .features-list{
+	display: flex;
+	justify-content: space-around;
+
+	margin: 0;
+	padding: 0;
+
 	list-style: none;
 }
 
 .feature-item{
+	width: 300px;
+
 	text-align: center;
 }
 
@@ -75,10 +149,15 @@ a{
 }
 
 .index-columns{
+	display: flex;;
+	justify-content: space-between;
+	padding: 50px 80px;
+	margin-bottom: 35px;
+
 	color: #000000;
 
 	background-color: #f8f5f2;
-	background-image: url("..img/pattern-light.img");
+	background-image: url("..img/index/pattern-light.img");
 	background-position: 0 0;
 	background-repeat: repeat;
 }
@@ -86,6 +165,10 @@ a{
 .index-columns h2{
 	font-size: 30px;
 	line-height: 42px;
+}
+
+.news{
+	width: 380px;
 }
 
 .news-list{
@@ -96,9 +179,21 @@ a{
 	text-transform: none;
 }
 
+.gallery{
+	width: 300px;
+}
+
 .gallery-content {
 	background-color: #cccccc;
 	border: 7px solid #ffffff;
+}
+
+.contacts{
+	width: 380px;
+}
+
+.appointment{
+	width: 300px;
 }
 
 .appointment-item input{
@@ -111,14 +206,142 @@ a{
 .appointment-item input:focus{
 	border-color: #663d15;
 }
+/*catalog styles*/
+.page-title{
+	font-size: 30px;
+	line-height: 42px;
+}
 
+.breadcrumbs{
+	list-style: none;
+}
+
+.breadcrumbs a{
+	color: #000000;
+}
+
+.breadcrumbs a:hover,
+.breadcrumbs a:focus{
+	text-decoration: underline;
+}
+
+.breadcrumbs-current{
+	color: #aba9a7;
+}
+
+.filter fieldset {
+	border: none;
+}
+
+.filter legend{
+	font-size: 24px;
+	line-height: 18px;
+}
+
+.filter ul{
+	list-style: none;
+	line-height: 18px;
+}
+
+.filter-input: hover + label,
+.filter-input: focus + label{
+	color: #663d15;
+}
+
+.filter-input:disabled + label{
+	opacity: 0.5;
+}
+
+.catalog-list{
+	list-style: none;
+}
+
+.catalog-item{
+	background-color: #f8f8f8;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.catalog-item:hover{
+	background-color: #f8f8f8;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.catalog-item a{
+	color: #000000;
+}
+
+.catalog-item h3{
+	font-size: 14px;
+	line-height: 18px;
+}
+
+.catalog-category{
+	text-transform: none;
+}
+
+.catalog-item-price b{
+	font-size: 14px;
+	line-height: 20px;
+	text-align: center;
+	background-color: #e5e5e5
+}
+
+.catalog-item-price .button{
+	line-height: 20px;
+	color: #ffffff;
+}
+
+.pagination-list{
+	list-style: none;
+}
+
+.pagination-item a{
+	color: #ffffff;
+	background-color: #000000;
+}
+
+
+.pagination-item a:hover,
+.pagination-item a:focus,
+.pagination-item a:active{
+	background-color: #663d15;
+}
+
+.pagination-item-current a{
+	color: #000000;
+
+	background-color: #ffffff;
+}
+
+.pagination-item-current a:hover,
+.pagination-item-current a:focus,
+.pagination-item-current a:active{
+	color: #000000;
+
+	background-color: #ffffff;
+}
+
+/*index*/
 .main-footer{
+	margin-top: 65px;
+	padding: 60px 0;
+
 	color: #ffffff;
 
 	background-color: #212121;
-	background-image: url("..img/pattern-dark.img");
+	background-image: url("..img/index/pattern-dark.img");
 	background-position: 0 0;
 	background-repeat: repeat;
+}
+
+.main-footer .container{
+	display: flex;
+}
+
+.footer-contacts{
+	width: 320px;
+	margin: 0;
+	margin-right: 80px;
 }
 
 .footer-contacts a{
@@ -132,6 +355,8 @@ a{
 }
 
 .footer-social{
+	width: 145px;
+
 	text-align: center;
 }
 
@@ -144,6 +369,10 @@ a{
 }
 
 .footer-copyright{
+	width: 150px;
+	margin: 0;
+	margin-left: auto;
+
 	text-align: center;
 }
 
@@ -158,7 +387,7 @@ a{
 	color: #000000;
 
 	background-color: #f8f3f0;
-	background-image: url("..img/pattern-light.img");
+	background-image: url("..img/index/pattern-light.img");
 	background-position: 0 0;
 	background-repeat: repeat;
 }
