--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 	min-width: 1222px;
 	min-height: 1750px;
 
-	font-fmily: "PT Sans Narrow", Areal, sans-serif;
+	font-family: "PT Sans Narrow", Areal, sans-serif;
 	font-size: 14px;
 	line-height: 24px;
 	font-weight: 700;
@@ -28,13 +28,39 @@ body{
 
 }
 
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden{
+	position: absolute;
+
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+
+	white-space: nowrap;
+
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+
 a{
 	text-decoration: none;
 }
 
-.button{
-	font: inherit;
+img{
+	max-width: 100%;
+	height: auto;
+}
 
+.button{
+	display: inline-block;
+	margin-right: 16px;
+	padding: 10px 30px;
+
+	font: inherit;
 	text-align: center;
 	color: #ffffff;
 	vertical-align: middle;
@@ -50,6 +76,13 @@ a{
 	background-color: #663d15;
 }
 
+.button.disabled,
+.button:disabled{
+	cursor: default;
+	opacity: 0.5;
+	background-color: #000000;
+}
+
 .main-header{
 	margin-bottom: 75px;
 }
@@ -59,7 +92,6 @@ a{
 	line-height: 20px;
 	color: #ffffff;
 
-	background-color: #000000;
 
 	display: flex;
 	flex-direction: column;
@@ -71,6 +103,8 @@ a{
 	height: 153px;
 
 	order: 2;
+
+	background: transparent;
 }
 
 .main-navigation-wrapper{
@@ -82,6 +116,8 @@ a{
 
 .container{
 	width: 940px;
+	justify-content: space-between; 
+
 	margin: 0 auto;
 	padding: 0 10px;
 }
@@ -103,24 +139,59 @@ a{
 }
 
 .site-navigation{
-	width: 620px;
+	display: flex;
+	flex-wrap: wrap;	
+
+	
 }
 
 .user-navigation{
-	width: 140px;
+	display: flex;
+	max-width: 140px;
 }
 
 
 .site-navigation a,
 .user-navigation a{
+	display: block;
+	padding: 25px 20px;
+
 	color: #ffffff;
 }
 
 .site-navigation a:hover,
-.user-navigation a:focus,
-.site-navigation a:hover,
+.site-navigation a:focus,
+.user-navigation a:hover,
 .user-navigation a:focus{
 	background-color: #242424;
+}
+
+.user-navigation .login-link a{
+	position: relative;
+	padding-left: 50px;
+}
+
+.login-link a::before{
+	content: "";
+
+	position: absolute;
+	top: 27px;
+	left: 24px;
+
+	width: 16px;
+	height: 18px;
+
+	background-image: url("../img/index/login-icon.png");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+
+	opacity: 0.3;
+}
+
+.login-link a:hover::before,
+.login-link a:focus::before,
+.login-link a:active::before{
+	opacity: 1;
 }
 
 .features{
@@ -144,8 +215,33 @@ a{
 }
 
 .feature-item h3{
+	position: relative;
+
+	margin: 0;
+	margin-bottom: 60px;
+
 	font-size: 30px;
 	line-height: 42px;
+}
+
+.feature-item h3::after{
+	content: "";
+
+	position: absolute;
+	bottom: -30px;
+	left: 50%;
+
+	width: 20px;
+	height: 20px;
+	margin-left: -10px;
+
+	background-color: #ffffff;
+
+	transform: rotate(45deg);
+}
+
+.feature-item p{
+	margin: 0 10px;
 }
 
 .index-columns{
@@ -157,12 +253,16 @@ a{
 	color: #000000;
 
 	background-color: #f8f5f2;
-	background-image: url("..img/index/pattern-light.img");
-	background-position: 0 0;
-	background-repeat: repeat;
+	background-image: url("../img/index/line.png"),
+	                  url("../img/index/pattern-light.img");
+	background-position: center, 0 0;
+	background-repeat: no-repeat, repeat;
 }
 
 .index-columns h2{
+	margin: 0;
+	margin-bottom: 25px;
+
 	font-size: 30px;
 	line-height: 42px;
 }
@@ -171,8 +271,21 @@ a{
 	width: 380px;
 }
 
+
 .news-list{
+	margin: 0;
+	margin-bottom: 25px;
+	padding: 0;
+
 	list-style: none;
+}
+
+.news-item{
+	margin-bottom: 25px;
+}
+
+.news-item p{
+	margin: 0;
 }
 
 .news-item time{
@@ -183,24 +296,94 @@ a{
 	width: 300px;
 }
 
+.gallery-container{
+	position: relative;
+
+	height: 260px;
+
+}
+
 .gallery-content {
+	height: 164px;
+	margin: 0;
+
 	background-color: #cccccc;
 	border: 7px solid #ffffff;
+}
+
+.gallery-content img{
+	width: 286px;
+	height: 164px;
+}
+
+.gallery-button{
+	box-sizing: border-box;
+	position: absolute;
+	bottom: 0;
+
+	width: 140px;
+	margin: 0;
+}
+
+.gallery-button-back{
+	left: 0;
+}
+
+.gallery-button-next{
+	right: 0;
 }
 
 .contacts{
 	width: 380px;
 }
 
+.contacts p{
+	margin: 0;
+	margin-bottom: 25px;
+}
+
 .appointment{
 	width: 300px;
 }
 
+.appointment-info{
+	margin: 0;
+	margin-bottom: 15px;
+}
+
+.appointment-form{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.appointment-item{
+	width: 140px;
+}
+
+.appointment-item label{
+	display: block;
+	margin-bottom: 9px;
+	margin-left: 15px;
+}
+
 .appointment-item input{
+	box-sizing: border-box;
+	width: 140px;
+	padding-top: 8px;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-bottom: 7px;
+
 	font: inherit;
 
 	background-color: transparent;
 	border: 2px solid #000000;
+}
+
+.appointment .button{
+	display: block;
+	width: 100%;
 }
 
 .appointment-item input:focus{
@@ -329,7 +512,7 @@ a{
 	color: #ffffff;
 
 	background-color: #212121;
-	background-image: url("..img/index/pattern-dark.img");
+	background-image: url("../img/index/pattern-dark.jpg");
 	background-position: 0 0;
 	background-repeat: repeat;
 }
@@ -361,15 +544,33 @@ a{
 }
 
 .footer-social ul{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	width: 141px;
+	margin: 15px auto;
+	padding: 0;
+
 	list-style: none;
 }
 
-.social-buttton{
-	color: #ffffff;
+.social-button{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 43px;
+	height: 43px;
+
+	background-color: #000000;
+}
+
+.social-button:hover,
+.social-button:focus{
+	background-color: gray;
 }
 
 .footer-copyright{
-	width: 150px;
+	width: 200px;
 	margin: 0;
 	margin-left: auto;
 
