--- a/css/style.css
+++ b/css/style.css
@@ -617,14 +617,14 @@ img{
 
 	font-size: 0;
 
-	background-color: red;
+	background-color: transparent;
 	border: 0;
 
 	cursor: pointer;
 }
 
 .modal-close::before,
-.modal-close:: after{
+.modal-close::after{
 	content: "";
 
 	position: absolute;
@@ -772,6 +772,8 @@ img{
 	top: 50%;
 	left: 50%;
 
+	display: none;
+
 	width: 766px;
 	height: 561px;
 	margin-top: -280px;
@@ -783,3 +785,9 @@ img{
 .modal-map p{
 	margin: 0;
 }
+
+.modal-show{
+	display: block;
+}
+
+.
